# emacs_settings

./: .emacs  .emacsWindows.txt  config.el  emacs-nativecomp-28.2-2-x86_64.pkg.tar.zst.sig  emacs.service  flycheck_.emacs.elc  functions.el  init.el  main.el  main.elc  menu.el  packages.el  readme.md
configs/: .pylintrc  Outline-Client.AppImage.desktop  isort.cfg  wezterm.lua
doom_configs/: config.el  init.el  packages.el
parsers/: Cargo.toml
parsers/src/: bin.rs  lib.rs
settings/: anaconda-settings.el  anaconda-settings.elc  functions.el  functions.elc  menu.el
snippets/python-mode/: chunker  inspect-celery  logg  raise  rpdb  tie  tis  trace  user
snippets/shell-mode/: inspect-lines  telnet  up
