[package]
name = "parsers"
version = "0.1.0"
authors = ["Nikita Ivanov <ganagsh@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
name = "parserslib"
path = "src/lib.rs"

# [[bin]]
# name = "parsersbin"
# path = "src/bin.rs"

[dependencies]
emacs = "0.11.0"
scraper = "0.11.0"
reqwest = "0.9.22"
regex = "*"